--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "prepare": "svelte-kit sync || echo ''",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-    "db:push": "drizzle-kit push"
+    "start": "node -r dotenv/config build"
   },
   "devDependencies": {
     "@sveltejs/adapter-auto": "^7.0.0",
