fix: remove that key from codebase

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,9 @@ DB_NAME=
 KAKAO_CLIENT_ID=
 KAKAO_CLIENT_SECRET=
 
+# 임시 (맵 API 사용 승인되면 위 KAKAO_CLIENT_SECRET 사용)
+KAKAO_MAP_SECRET=
+
 # Production
 PORT=
 ORIGIN=
